[package]
name = "drogue-http-client"
version = "0.0.2"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"
license = "Apache-2.0"
description = "An HTTP client for embedded devices, based on drogue-network"
repository = "https://github.com/drogue-iot/drogue-http-client"
homepage = "https://blog.drogue.io"
categories = ["embedded", "no-std"]
readme = "README.md"

[dependencies]

drogue-network = "0.2"

heapless = "0.5"
httparse = { version = "1", default-features = false }

log = "0.4"
nb = "1"

[dev-dependencies]
env_logger = "0.7"

[patch.crates-io]
#drogue-network = { path = "../drogue-network" }
